plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm'
}

group = 'br.com.zenon'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:6.0.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    implementation 'com.mysql:mysql-connector-j:9.6.0'
}

test {
    useJUnitPlatform()
}
kotlin {
    jvmToolchain(25)
}